Slette argLine i surefire i pom
                <argLine> --add-opens bikeRentalApp.core/bikeRentalApp.core=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
For å kunne kjøre jacoco

#37