@@ -134,9 +134,6 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M5</version>
             <configuration>
-                <argLine>
-                --add-opens bikeRentalApp.core/bikeRentalApp.core=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                </argLine>
                 <source>1.8</source>
                 <target>1.8</target>
             </configuration>
